helloword/helloword-pod.yaml
# Os pods são as menores unidades de computação implantáveis ​​que você pode criar e gerenciar no Kubernetes.
apiVersion: v1
kind: Pod
metadata:
  name: kuard
  labels:
    app: kuard
spec:
  containers:
    - image: learnistio/helloworld:1.0.0
      name: kuard
      ports: 
      - containerPort: 3000
        name: http 
        protocol: TCP
