helloword/helloword-svc.yaml
# Um "Service" no Kubernetes é um objeto REST, semelhante a um pod
apiVersion: v1
kind: Service
metadata:
  name: kuard-svc
  labels:
    app: kuard-svc
    run: kuard-svc
spec:
  selector:
    app: kuard
  ports:
  - port: 80            # expõe o serviço Kubernetes na porta especificada dentro do cluster;
    protocol: TCP
    targetPort: 3000    # é a porta na qual o serviço enviará solicitações, na qual seu pod estará escutando. Seu aplicativo no contêiner precisará estar escutando nesta porta também.
