helloword/helloword-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-destination
spec:
  host: kuard.default.svc.cluster.local
