helloword/helloword-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
    - route:
      - destination:
          host: kuard.default.svc.cluster.local
          port:
            number: 80
